--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,60 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Coin Info</title>
-    <style>
-        /* Reset margin and padding */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body, html {
-            height: 100%;
-            font-family: Arial, sans-serif;
-        }
-
-        .full-page {
-            position: relative;
-            height: 100vh;
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            text-align: center;
-        }
-
-        /* Links container */
-        .content {
-            position: absolute;
-            bottom: 10%;
-            width: 100%;
-            text-align: center;
-            font-size: 1.2em;
-        }
-
-        .content a {
-            color: #ffffff;
-            text-decoration: none;
-            padding: 0.5em 1em;
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 5px;
-            margin: 0 0.5em;
-        }
-
-        /* Address box */
-        .address-box {
-            position: absolute;
-            top: 10%;
-            background-color: rgba(0, 0, 0, 0.6);
-            color: #fff;
-            padding: 0.5em 1em;
-            border-radius: 5px;
-        }
-    </style>
+    <title>$MAGA MAKE ASS GO AROUND</title>
+  
 </head>
 <body>
 
