--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$MAGA MAKE ASS GO AROUND</title>
-  
+    <link rel="stylesheet" href="Untitledcss.css">
+    <title>$MAGA MAGAassonsol</title>
+   
 </head>
 <body>
 
