--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Section 2 (Photo Background) -->
-    <div class="full-page" style="background-image: url('photo2.jpg');"></div>
+    <div class="full-page" style="background-image: url('225603-patriotic-ass-nude (1).jpg');"></div>
 
     <!-- Section 3 (Photo Background) -->
     <div class="full-page" style="background-image: url('photo3.jpg');"></div>
