--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Section 1 (Photo Background) -->
-    <div class="full-page" style="background-image: url('photo1.jpg');">
+    <div class="full-page" style="background-image: url('Screenshot_5-11-2024_173144_images.search.yahoo.com.jpeg');">
         <div class="address-box">
             Coin Contract Address: <span id="contract-address">0xYourCoinAddressHere</span>
         </div>
