--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -25,7 +25,7 @@
     <div class="full-page" style="background-image: url('225603-patriotic-ass-nude (1).jpg');"></div>
 
     <!-- Section 3 (Photo Background) -->
-    <div class="full-page" style="background-image: url('photo3.jpg');"></div>
+    <div class="full-page" style="background-image: url('QmQK4HdPerZiZ8JAfMhsaDmftMGmTUcmUwjurB8wQNzLtF.jpg');"></div>
 
 </body>
 </html>
